Creación del tablero

--- a/index.html
+++ b/index.html
@@ -5,6 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SimonSay</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8"></div>
+        <div class="col-sm-2">
+          <p>Ronda #<strong>0</strong></p>
+        </div>
+        <div class="col-sm-2">
+          <button type="button" class="btn btn-primary">Empezar</button>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="cuadro">A</div>
+        </div>
+        <div class="col-sm">
+          <div class="cuadro">B</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
