--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="col-sm-2">
-          <p>Ronda #<strong>0</strong></p>
+          <p>Ronda #<strong id="ronda">0</strong></p>
         </div>
         <div class="col-sm-2">
           <button type="button" class="btn btn-primary" id="botonEmpezar">
